--- a/src/main/resources/fxml/SnowFallingApp_layout.fxml
+++ b/src/main/resources/fxml/SnowFallingApp_layout.fxml
@@ -2,10 +2,16 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.SpinnerValueFactory.IntegerSpinnerValueFactory?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <center>
@@ -14,18 +20,33 @@
     <right>
         <VBox fx:id="vbSettings" depthTest="DISABLE" prefHeight="400.0" prefWidth="178.0" spacing="5.0" BorderPane.alignment="CENTER">
             <children>
-<!--                <Label text="Pendulums number:" />
-                <Spinner fx:id="spPendulumsNumber" editable="false">
+                <Label text="Snowflakes number:" />
+            <Slider fx:id="sldSnowflakesNbr" blockIncrement="50.0" majorTickUnit="500.0" max="2000.0" min="400.0" minorTickCount="5" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="400.0">
+               <effect>
+                  <DropShadow blurType="ONE_PASS_BOX">
+                     <color>
+                        <Color red="0.04452972859144211" green="0.14009401202201843" blue="0.5657894611358643" />
+                     </color>
+                  </DropShadow>
+               </effect>
+            </Slider>
+            <Label text="Max drop speed:" />
+            <Slider fx:id="sldMaxDropSpeed" majorTickUnit="10.0" max="70.0" min="1.5" minorTickCount="5" showTickLabels="true" showTickMarks="true" value="1.5">
+               <effect>
+                  <DropShadow>
+                     <color>
+                        <Color red="0.027290448546409607" green="0.053541261702775955" blue="0.42105263471603394" />
+                     </color>
+                  </DropShadow>
+               </effect>
+            </Slider>
+                <Label text="Max flake radius:" />
+                <Spinner fx:id="spMaxFlakeRadius">
                     <valueFactory>
-                        <SpinnerValueFactory.IntegerSpinnerValueFactory max="100" min="15" />
+                        <SpinnerValueFactory.IntegerSpinnerValueFactory max="15" min="8" />
                     </valueFactory>
                 </Spinner>
-                <Label text="Bob diameter:" />
-                <Spinner fx:id="spBobDiameter">
-                    <valueFactory>
-                        <SpinnerValueFactory.IntegerSpinnerValueFactory max="30" min="15" />
-                    </valueFactory>
-                </Spinner>-->
+            <Label text="Label" />                
                 <HBox prefHeight="46.0" prefWidth="150.0" spacing="5.0">
                     <children>
                         <Button fx:id="btnStart" alignment="BOTTOM_CENTER" mnemonicParsing="false" text="Start" />
