--- a/src/main/resources/fxml/SnowFallingApp_layout.fxml
+++ b/src/main/resources/fxml/SnowFallingApp_layout.fxml
@@ -3,9 +3,11 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.SpinnerValueFactory.IntegerSpinnerValueFactory?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -13,14 +15,20 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="601.0" prefWidth="682.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <center>
         <Pane id="animationPanel" fx:id="renderingPane" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
     </center>
     <right>
         <VBox fx:id="vbSettings" depthTest="DISABLE" prefHeight="400.0" prefWidth="178.0" spacing="5.0" BorderPane.alignment="CENTER">
             <children>
-                <Label text="Snowflakes number:" />
+                <Label text="Max Flake Radius:" />
+                <Spinner fx:id="spMaxFlakeRadius">
+                    <valueFactory>
+                        <SpinnerValueFactory.IntegerSpinnerValueFactory max="15" min="8" />
+                    </valueFactory>
+                </Spinner>
+                <Label text="Snowflakes Number:" />
             <Slider fx:id="sldSnowflakesNbr" blockIncrement="50.0" majorTickUnit="500.0" max="2000.0" min="400.0" minorTickCount="5" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="400.0">
                <effect>
                   <DropShadow blurType="ONE_PASS_BOX">
@@ -30,8 +38,8 @@
                   </DropShadow>
                </effect>
             </Slider>
-            <Label text="Max drop speed:" />
-            <Slider fx:id="sldMaxDropSpeed" majorTickUnit="10.0" max="70.0" min="1.5" minorTickCount="5" showTickLabels="true" showTickMarks="true" value="1.5">
+            <Label text="Max Drop Speed:" />
+            <Slider fx:id="sldMaxDropSpeed" majorTickUnit="10.0" max="70.0" min="4.5" minorTickCount="5" showTickLabels="true" showTickMarks="true" value="1.5">
                <effect>
                   <DropShadow>
                      <color>
@@ -40,21 +48,87 @@
                   </DropShadow>
                </effect>
             </Slider>
-                <Label text="Max flake radius:" />
-                <Spinner fx:id="spMaxFlakeRadius">
-                    <valueFactory>
-                        <SpinnerValueFactory.IntegerSpinnerValueFactory max="15" min="8" />
-                    </valueFactory>
-                </Spinner>
-            <Label text="Label" />                
+            <Separator prefWidth="200.0">
+               <VBox.margin>
+                  <Insets top="15.0" />
+               </VBox.margin>
+            </Separator>
+            <Label text="Wind Speed:" />
+            <Slider fx:id="sldWindSpeed" majorTickUnit="10.0" max="150.0" min="4.5" minorTickCount="5" showTickLabels="true" showTickMarks="true" value="1.5">
+               <effect>
+                  <DropShadow>
+                     <color>
+                        <Color red="0.027290448546409607" green="0.053541261702775955" blue="0.42105263471603394" />
+                     </color>
+                  </DropShadow>
+               </effect>
+            </Slider>
+            <Label text="Apply Wind: " />
+            <HBox fx:id="hbxWindGroup" spacing="5.0">
+               <children>
+                  <ToggleButton fx:id="tgbtnWindON" mnemonicParsing="false" selected="true" text="ON">
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color red="0.02217348851263523" green="0.09719379246234894" blue="0.3684210479259491" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                  </ToggleButton>
+                  <ToggleButton fx:id="tgbtnWindOFF" mnemonicParsing="false" text="OFF">
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color red="0.02217348851263523" green="0.09719379246234894" blue="0.3684210479259491" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                  </ToggleButton>
+               </children>
+               <VBox.margin>
+                  <Insets top="2.0" />
+               </VBox.margin>
+            </HBox>
+            <Label text="Wind Direction:">
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </Label>
+            <HBox fx:id="hbxWindGroup1" spacing="5.0">
+               <children>
+                  <ToggleButton fx:id="tgbtnWindDirectionRight" mnemonicParsing="false" selected="true" text="RIGHT">
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color red="0.02217348851263523" green="0.09719379246234894" blue="0.3684210479259491" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                  </ToggleButton>
+                  <ToggleButton fx:id="tgbtnWindDirectionLeft" mnemonicParsing="false" text="LEFT">
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color red="0.02217348851263523" green="0.09719379246234894" blue="0.3684210479259491" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                  </ToggleButton>
+               </children>
+            </HBox>
+            <Separator prefWidth="200.0">
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
+            </Separator>                
                 <HBox prefHeight="46.0" prefWidth="150.0" spacing="5.0">
                     <children>
                         <Button fx:id="btnStart" alignment="BOTTOM_CENTER" mnemonicParsing="false" text="Start" />
-                        <Button fx:id="btnStop" alignment="BOTTOM_CENTER" mnemonicParsing="false" text="Stop" />
+                        <Button fx:id="btnStop" alignment="BOTTOM_CENTER" mnemonicParsing="false" text="Pause" />
                         <Button fx:id="btnReset" mnemonicParsing="false" text="Reset" />
                     </children>
                     <VBox.margin>
-                        <Insets top="10.0" />
+                        <Insets top="5.0" />
                     </VBox.margin>
                 </HBox>
             </children>
