--- a/src/main/resources/fxml/SnowFallingApp_layout.fxml
+++ b/src/main/resources/fxml/SnowFallingApp_layout.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Slider?>
@@ -22,7 +23,7 @@
     <right>
         <VBox fx:id="vbSettings" depthTest="DISABLE" prefHeight="400.0" prefWidth="178.0" spacing="5.0" BorderPane.alignment="CENTER">
             <children>
-                <Label text="Max Flake Radius:" />
+                <Label text="Flake Radius:" />
                 <Spinner fx:id="spMaxFlakeRadius">
                     <valueFactory>
                         <SpinnerValueFactory.IntegerSpinnerValueFactory max="15" min="8" />
@@ -38,7 +39,7 @@
                   </DropShadow>
                </effect>
             </Slider>
-            <Label text="Max Drop Speed:" />
+            <Label text="Drop Speed:" />
             <Slider fx:id="sldMaxDropSpeed" majorTickUnit="10.0" max="70.0" min="4.5" minorTickCount="5" showTickLabels="true" showTickMarks="true" value="1.5">
                <effect>
                   <DropShadow>
@@ -116,9 +117,14 @@
                   </ToggleButton>
                </children>
             </HBox>
+            <CheckBox fx:id="chbBackground" mnemonicParsing="false" selected="true" text="Show background">
+               <VBox.margin>
+                  <Insets top="15.0" />
+               </VBox.margin>
+            </CheckBox>
             <Separator prefWidth="200.0">
                <VBox.margin>
-                  <Insets top="30.0" />
+                  <Insets top="20.0" />
                </VBox.margin>
             </Separator>                
                 <HBox prefHeight="46.0" prefWidth="150.0" spacing="5.0">
